force-app/main/default/objects/Inventory_Transaction__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Battery</label>
    <referenceTo>Battery__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>