force-app/main/default/objects/Inventory_Transaction__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Location</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Transactions (Destination Location)</relationshipLabel>
    <relationshipName>Inventory_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>