force-app/main/default/objects/Inventory_Transaction__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Location</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>