force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Time__c</fullName>
    <label>Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>