force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reason__c</fullName>
    <label>Transaction Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>