force-app/main/default/objects/Inventory_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INWARD</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
            <value>
                <fullName>DISPATCH</fullName>
            </value>
            <value>
                <fullName>RECEIPT</fullName>
            </value>
            <value>
                <fullName>ADJUSTMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>